--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/user-event": "13.5.0",
+    "axios": "1.7.7",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
