--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/user-event": "13.5.0",
     "axios": "1.7.7",
+    "gh-pages": "6.2.0",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -15,8 +16,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,5 +39,6 @@
   },
   "devDependencies": {
     "@testing-library/react": "12.1.5"
-  }
+  },
+  "homepage": "https://space086.github.io/movie_app_2019/"
 }
